# noidea

./: .env.bak  .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  go.mod  go.sum  install.sh  main.go  main_test.go  mkdocs.yml  noidea  noidea-article-research.md  personalities.toml.example  pyproject.toml  quickinstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build-docs.yml  docs.yml  jekyll-gh-pages.yml  pages.yml  release.yml  tests.yml  version-bump.yml
.golangci-lint/: config.yml
cmd/: config.go  feedback.go  github.go  init.go  moai.go  root.go  root_test.go  suggest.go  summary.go  update.go
docs/: .gitignore  Gemfile  README.md  _config.yml  about.html  api-key-management.md  commands.md  configuration.md  contact.html  faq.md  index.html  index.md  installation.md  personalities.md  service.html  usage.md
docs/_docs/: configuration.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/blog/: .authors.yml  .categories.yml  index.md
docs/dev-guide/: code-style.md  core-components.md  overview.md  project-structure.md  testing.md
docs/docs/: faq.md  getting-started.md  usage.md
docs/stylesheets/: extra.css
docs/user-guide/: configuration.md  getting-started.md  (+2 more)
scripts/: install-hooks.sh  lint.sh  migrate_to_secure.sh  post-commit.sh  prepare-commit-msg  serve_docs.sh  setup-blog.sh  setup-github.sh  setup-hooks.sh  version.sh
tests/: README.md  run_tests.sh  setup_test_repo.sh  simulation_tester.go
(+50 files in other folders)
